[gd_scene load_steps=3 format=3 uid="uid://bvdkaj1eb6nme"]

[ext_resource type="Script" path="res://Recipes/recipe_book_ui.gd" id="1_uey0f"]
[ext_resource type="Theme" uid="uid://cjoh1pmvhw5l0" path="res://Themes/overall_theme.tres" id="2_u1ckc"]

[node name="RecipeBookUI" type="Node2D"]
visible = false
script = ExtResource("1_uey0f")

[node name="RecipeBookCanvas" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="Background" type="ColorRect" parent="RecipeBookCanvas"]
offset_right = 1100.0
offset_bottom = 650.0
scale = Vector2(1.05477, 1)
color = Color(0.854902, 0.513726, 0.34902, 1)
metadata/_edit_use_anchors_ = true

[node name="ScrollContainer" type="ScrollContainer" parent="RecipeBookCanvas"]
unique_name_in_owner = true
offset_left = 37.0
offset_top = 56.0
offset_right = 1119.0
offset_bottom = 630.0
focus_mode = 2
horizontal_scroll_mode = 0

[node name="RecipeGridContainer" type="GridContainer" parent="RecipeBookCanvas/ScrollContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(10.97, 0)
layout_mode = 2

[node name="CloseButton" type="Button" parent="RecipeBookCanvas"]
unique_name_in_owner = true
offset_left = 926.0
offset_top = 10.0
offset_right = 1116.0
offset_bottom = 41.0
focus_neighbor_left = NodePath("../ShowAllButton")
theme = ExtResource("2_u1ckc")
text = "Close"

[node name="ShowUnlockedButton" type="Button" parent="RecipeBookCanvas"]
offset_left = 30.0
offset_top = 10.0
offset_right = 220.0
offset_bottom = 41.0
focus_neighbor_right = NodePath("../ShowAllButton")
theme = ExtResource("2_u1ckc")
text = "Show Unlocked Recipes"

[node name="ShowAllButton" type="Button" parent="RecipeBookCanvas"]
offset_left = 235.0
offset_top = 10.0
offset_right = 425.0
offset_bottom = 41.0
focus_neighbor_left = NodePath("../ShowUnlockedButton")
focus_neighbor_right = NodePath("../CloseButton")
theme = ExtResource("2_u1ckc")
text = "Show All Recipes"

[connection signal="pressed" from="RecipeBookCanvas/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="RecipeBookCanvas/ShowUnlockedButton" to="." method="_on_show_unlocked_button_pressed"]
[connection signal="button_down" from="RecipeBookCanvas/ShowAllButton" to="." method="_on_show_all_button_button_down"]
